added msft meta tracking

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html><head>
     <title>Krishna Kanti Cring</title>
+    <meta name="msvalidate.01" content="97D5465426718F4C2E109415C6D78746" />
     <meta name="description" content="In Memory of Krishna Kanti Cring, born Krishna Kanti Jacobs, may he rest in peace. Born to an ISKCON Inc. guru at the Hare Krishna Palace of Gold.">
     <meta name="keywords" content="Krishna, Kanti, Cring, Jacobs, ISKCON, Hare Krishna, Guru">
     <meta name="author" content="Krishna Kanti">
