index update with link and about page
included about page with donate button

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
         <object data="./Krishna_Kanti_Cring.pdf" type="application/pdf" width="100%" height="1000px">
             <p>Your browser does not support PDFs. <a href="./Krishna_Kanti_Cring.pdf">Download the PDF</a></p>
         </object>
-        <p><h4>Many victims paid with their lives. This notice was sent to over 1000 individuals residing near some of the largest satanic Hare Krishna centers in the United States. This notice was also mailed directly to over 50 law enforcement agencies in the jurisdictions of the largest Hare Krishna facilities in the United States. These direct mailings were made at the personal expense of victims of rape and torture and robbery by the leaders of ISKCON Inc., your neighborhood Hare Krishna cult. You can expand the direct mail campaign by donating via paypal to: everforward@live.com . Each letter costs about $2 to send. Every dollar you donate will go directly to sending more notices to a wider audience. Help stop this criminal organization and bring attention to the victims of the horrible lifetime of robbery and torture imposed on them by this satanic cult, the Hare Krishna Indian cult.</h></p>
+        <p><h4><a href="./about_krishna_kanti_cring.html">about</a></h></p>
 </body></html>
