--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
         <object data="./Krishna_Kanti_Cring.pdf" type="application/pdf" width="100%" height="1000px">
             <p>Your browser does not support PDFs. <a href="./Krishna_Kanti_Cring.pdf">Download the PDF</a></p>
         </object>
-        <p><h4><a href="./about_krishna_kanti_cring.html">about</a></h></p>
+        <p><h4><a href="./about_krishna_kanti_cring.html">about</a></h4></p>
 </body></html>
