--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <object data="./Krishna_Kanti_Cring.pdf" type="application/pdf" width="100%" height="1000px">
             <p>Your browser does not support PDFs. <a href="./Krishna_Kanti_Cring.pdf">Download the PDF</a></p>
         </object>
-        <p><h4><a href="./about_krishna_kanti_cring.html">about</a></h4><h4><a href="./links_krishna_kanti_cring.html">links</a></h4></p><p>  <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=804d3c99603d805eb3255cfc12f016869dcaa4c6'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1327168/t/11"></script></p>
+        <p><h4><a href="./about_krishna_kanti_cring.html">about</a></h4><h4><a href="./links_krishna_kanti_cring.html">links</a></h4></p><p><h5><a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=804d3c99603d805eb3255cfc12f016869dcaa4c6'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1327168/t/11"></script></h5></p>
 </body></html>
