--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>    <title>Krishna Kanti Cring</title>
-    <meta name="description" content="In Memory of Krishna Kanti Cring, born Krishna Kanti Jacobs, may he rest in peace. Born to an ISKCON Inc. guru at the Hare Krishna Palace of Gold.">
+    <meta name="description" content="In Memory of Krishna Kanti Cring, born Krishna Kanti Jacobs, may he rest in peace. Born to an ISKCON Inc. guru at the Hare Krishna Palace of Gold. Robbed and murdered by the satanic Hare Krishna cult.">
     <meta name="keywords" content="Krishna, Kanti, Cring, Jacobs, ISKCON, Hare Krishna, Guru">
     <meta name="author" content="Krishna Kanti">
     <meta content="text/html; charset=UTF-8" http-equiv="content-type"><meta content="text/html; charset=UTF-8" http-equiv="content-type"><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">@import url(https://themes.googleusercontent.com/fonts/css?kit=KLiOHwWVVT-TB4Qo5wCEYPrwRTnPB_Dzjuf_N-veyUoaJAuBVF8ot41-avRdpn9A);html,body{width:100%;min-width: 320px;align-content: center;padding-left: auto;padding-right: auto;margin-left: auto;margin-right: auto}ol{margin:0;padding:0}table td,table th{padding:0}
