--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html><head>    <title>Krishna Kanti Cring</title>
+    <link rel="canonical" href="https://krishnakanti.org" />
     <meta name="description" content="In Memory of Krishna Kanti Cring, born Krishna Kanti Jacobs, may he rest in peace. Born to an ISKCON Inc. guru at the Hare Krishna Palace of Gold. Robbed and murdered by the satanic Hare Krishna cult.">
     <meta name="keywords" content="Krishna, Kanti, Cring, Jacobs, ISKCON, Hare Krishna, Guru">
     <meta name="author" content="Krishna Kanti">
