added  pdfs for most recent mailings

--- a/download_previous_versions.html
+++ b/download_previous_versions.html
@@ -18,6 +18,10 @@
     <p><a href="./Krishna_Kanti_Berkley_old.pdf">Krishna_Kanti_Berkley_old.pdf</a></p>
     <p><a href="./KKrishna_Kanti_Cring.pdf">Krishna_Kanti_Cring.pdf</a></p>
     <p><a href="./Krishna_Kanti_Cring_Jacobs.pdf">Krishna_Kanti_Cring_Jacobs.pdf</a></p>
+    <p><a href="./gitaCard.pdf">First Gita Postcard</a></p>
+    <p><a href="./Dimmocks-Gita-postCard.pdf">Hillsborough North Carolina Gita Postcard</a></p>
+    <p><a href="./Watseka-Gita-postCard.pdf">Watseka Ave LA Postcard</a></p>
+    <p><a href="./LongIsland-GitaCard.pdf">LongIsland Gita postCard</a></p>
     <p><a href="./KrishnaKantiSandyRidge_new.pdf">Newest</a></p>
 
 <p class="c6"><span class="c0">Download Related Mailings:</span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p>
@@ -33,6 +37,10 @@
     <p><a href="./Krishna_Kanti_Berkley_old.pdf">Krishna_Kanti_Berkley_old.pdf</a></p>
     <p><a href="./to_the_gurus_brother.pdf">to_the_gurus_brother.pdf</a></p>
     <p><a href="./LawsuitLink4Mack.pdf">LawsuitLink4Mack.pdf</a></p>
+    <p><a href="./1022DimmocksMillRd_neighbor.pdf">1022DimmocksMillRd_neighbor.pdf</a></p>
     <p><a href="./KrishnaKantiSandyRidge_new.pdf">Newest</a></p>
+
+<p class="c6"><span class="c0">Images:</span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p>
+        <img src="./images/krishna-kanti-postcard-gita-guru.png" alt="Krishna Kanti Postcard" />
 
 <p class="c5"><span class="c7">&copy; KrishnaKanti.org 1978-2025</span></p></body></html>
