github sponsor link added for NoClouds

--- a/developers.html
+++ b/developers.html
@@ -7,5 +7,7 @@
         <h3><a href="https://krishnakanti.org">Home</a></h3>
         <p class="c5"><span class="c3">Developers</span></p></span>
         <h1>Become a contributor to the development of this website on Github, fork the website, make your editions and submit pull requests. Developers and editors are welcome to contrinute. <a href="https://github.com/noclouds/krishna_kanti_cring.git">https://github.com/noclouds/krishna_kanti_cring.git</a></h1>
+        
+        <h1>You can contribute as a sponsor of the website here: <a href="https://github.com/sponsors/noclouds">https://github.com/sponsors/noclouds</a></h1>
 
 <p class="c5"><span class="c7">&copy; KrishnaKanti.org 1978-2025</span></p></body></html>
