--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         <p class="c0 c10"><span class="c4"></span></p><p class="c0 c10"><span class="c4"></span></p><p class="c23"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 609.00px; height: 485.92px;"><img alt="Krishna Kanti Cring" src="images/image9.png" style="width: 609.00px; height: 485.92px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="Krishna Kanti"></span></p><p class="c0"><span class="c37">KRISHNA KANTI CRING </span></p><p class="c0"><span class="c1">born Krishna Kanti Jacobs</span></p><p class="c0"><span class="c1">1978-2018</span></p><p class="c0"><span class="c1">May the satanic Hare Krishna cult be eliminated.</span></p><p class="c0"><span class="c1">May Krishna Kanti Cring rest in peace.</span></p>
 <div style="width: 100%;padding: auto,0,auto,0;">
     <h2><a href="./KrishnaKantiSandyRidge_new.pdf">Download the letter</a></h2>
-    <h2><a href="./Krishna_Kanti_PostCard.pdf">Download the postcard</a></h2>
     <h2><a href="./LongIsland-GitaCard.pdf">Download the Bhagavad Gita</a></h2>
     <h2><a href="./KrishnaKanti-arrowCard.pdf">Most Recent Mailing</a></h2>
-    <h2><a href="./adapose-KKC-card-withfoot">Sent to the Demon Guru</a></h2>
+    <h2><a href="./adapose-KKC-card-withfoot.pdf">Sent to the Demon Guru</a></h2>
     <h2><a href="./krishna_kanti_cring_lawsuit.pdf">The Lawsuit PDF</a></h2>
     <h1>---</h1>
 </div>
