ricocomplaint pdf upload index update
updated files with bitcoin address:
about
links
developers
downloads
index

--- a/developers.html
+++ b/developers.html
@@ -10,4 +10,6 @@
         
         <h1>You can contribute as a sponsor of the website here: <a href="https://github.com/sponsors/noclouds">https://github.com/sponsors/noclouds</a></h1>
 
-<p class="c5"><span class="c7">&copy; KrishnaKanti.org 1978-2025</span></p></body></html>
+<p class="c5"><span class="c7">&copy; KrishnaKanti.org 1978-infinity</span></p>
+ <h2>btc: 169MtpLsHHbg1GbmVZogJtSkKUdRCRB2y9</h2>
+</body></html>
