--- a/download_previous_versions.html
+++ b/download_previous_versions.html
@@ -43,4 +43,6 @@
 <p class="c6"><span class="c0">Images:</span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p>
         <img src="./images/krishna-kanti-postcard-gita-guru.png" alt="Krishna Kanti Postcard" />
 
-<p class="c5"><span class="c7">&copy; KrishnaKanti.org 1978-2025</span></p></body></html>
+<p class="c5"><span class="c7">&copy; KrishnaKanti.org 1978-2025</span></p>
+<h2>btc: 169MtpLsHHbg1GbmVZogJtSkKUdRCRB2y9</h2>
+</body></html>
