--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <h2><a href="./KrishnaKantiSandyRidge_new.pdf">Download the letter</a></h2>
     <h2><a href="./LongIsland-GitaCard.pdf">Download the Bhagavad Gita</a></h2>
     <h2><a href="./KrishnaKanti-arrowCard.pdf">Most Recent Mailing</a></h2>
-    <h2><a href="./krishna_kanti_cring_lawsuit.pdf">The Lawsuit PDF</a></h2>
+    <h2><a href="./ricocomplaint.pdf">The First Lawsuit PDF</a></h2>
+    <h2><a href="./krishna_kanti_cring_lawsuit.pdf">The Second Lawsuit PDF</a></h2>
     <h1>---</h1>
     </center>
 </div>
@@ -35,7 +36,7 @@
     <h1><a href="./links_krishna_kanti_cring.html">LINKS</a></h1>
     <h1><a href="./download_previous_versions.html">DOWNLOADS</a></h1>
     <h1><a href="./developers.html">DEVELOPERS/SPONSORS - Github</a></h1>
+</div>
+</div>
     <h2>btc: 169MtpLsHHbg1GbmVZogJtSkKUdRCRB2y9</h2>
-</div>
-</div>
 </body></html>
