Bruce Jacobs mack Cards and links updated
donwloads, index and another card uploaded blocked2Mack-postcard-size-3.pdf

--- a/download_previous_versions.html
+++ b/download_previous_versions.html
@@ -22,7 +22,9 @@
     <p><a href="./Dimmocks-Gita-postCard.pdf">Hillsborough North Carolina Gita Postcard</a></p>
     <p><a href="./Watseka-Gita-postCard.pdf">Watseka Ave LA Postcard</a></p>
     <p><a href="./LongIsland-GitaCard.pdf">LongIsland Gita postCard</a></p>
-    <p><a href="./KrishnaKantiSandyRidge_new.pdf">Newest</a></p>
+    <p><a href="./KrishnaKantiSandyRidge_new.pdf">Sandy Ridge</a></p>
+    <p><a href="./Hare_Krishna_religion_basics.png">Bruce Jacobs</a></p>
+    <p><a href="./blocked2Mack-postcard-size-3.pdf">Newest</a></p>
 
 <p class="c6"><span class="c0">Download Related Mailings:</span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p>
     <p><a href="./ISKCON-KANTI.pdf">ISKCON-KANTI.pdf</a></p>
@@ -38,7 +40,6 @@
     <p><a href="./to_the_gurus_brother.pdf">to_the_gurus_brother.pdf</a></p>
     <p><a href="./LawsuitLink4Mack.pdf">LawsuitLink4Mack.pdf</a></p>
     <p><a href="./1022DimmocksMillRd_neighbor.pdf">1022DimmocksMillRd_neighbor.pdf</a></p>
-    <p><a href="./KrishnaKantiSandyRidge_new.pdf">Newest</a></p>
 
 <p class="c6"><span class="c0">Images:</span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p><p class="c4"><span class="c0"></span></p>
         <img src="./images/krishna-kanti-postcard-gita-guru.png" alt="Krishna Kanti Postcard" />
