--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
             <p class="c23"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 609.00px; height: 485.92px;"><img alt="Hare Krishna Kanti religion explained" src="blocked2Mack-postcard-size.png" style="width: 609.00px; height: 485.92px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="Krishna Kanti"></span></p>
         </span></p>
-        <p class="c0 c10"><span class="c4"></span></p><p class="c23"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 609.00px; height: 485.92px;"><img alt="Krishna Kanti Cring" src="images/image9.png" style="width: 609.00px; height: 485.92px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="Krishna Kanti"></span></p><p class="c0"><span class="c37">KRISHNA KANTI CRING </span></p><p class="c0"><span class="c1">born Krishna Kanti Jacobs</span></p>
+        <p class="c0 c10"><span class="c4"></span></p><p class="c23"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 609.00px; height: 485.92px;"><img alt="Kanti Cring" src="images/image9.png" style="width: 609.00px; height: 485.92px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title="Krishna Kanti"></span></p><p class="c0"><span class="c37">KANTI CRING </span></p><p class="c0"><span class="c1">born Krishna Kanti Jacobs</span></p>
         <br><br>
         <p class="c0"><span class="c1">1978-2018</span></p>
         <br><br>
         <p class="c0"><span class="c1">May the satanic Hare Krishna cult be eliminated.</span></p>
         <br><br>
-        <p class="c0"><span class="c1">May Krishna Kanti Cring rest in peace.</span></p>
+        <p class="c0"><span class="c1">May Kanti Cring rest in peace.</span></p>
         <br>
         <center>
 <div style="width: 100%;padding: auto,0,auto,0;"><center>
