affiliates, page sponsors

--- a/affiliates.html
+++ b/affiliates.html
@@ -8,15 +8,29 @@
      <div>
      <p class="c2 c10"><span class="c0">Messages from our sponsors:</span></p>
      <p class="c3"><span class="c0">
-<u>From a survivor:</u><br>We were kept as animals as children from the age of 3. We were tortured daily in a program of aceticism. <br>
-<br>We were herded like animals, separated from our parents. <br>
-<br>Our introduction to English was with lessons in self-sacrifice, fasting, acceptance of death, loss and pain, familicide and suicide. <br>
-<br>The cult took our family property and taught us to face each day for the cause of death. <br>
-<br>Every day we awoke from tortuous sleep, forbidden from having beds or pillows. We were then, every day, herded like animals, 3 years old, 4 years old, 5 years old, through the dark and cold to the bright lights of a shiny temple room to worship the images of a blue-black murder-rape demon called Krishna with its fantasy 108 fair-skinned women. There, without the touch of parents, like animals, forced to dance and perform for preachers and adults, with the images of bloody vicious familicidal murder; then indoctrinated with lectures on humility, sacrifice, karma and death, suicidal fasting, self-destruction, and self-blame, and worship of comfortable adults and statues of Indian men and statues of murderous animal men and the demon blue-black rape demon from India; instructed to seek death to be reincarnated as cows, grass, dirt, animals, and servants and slaves and sex partners with the blue-black fantasy demon from India and its representatives.
-<br>
-<br>
-We who survived and escaped discovered the total robbery of our lives, the total and complete deception, the theft of our childhoods, the theft of our freedom to learn from our experience and thoughts. Our lives are haunted with the enduring memory of every day of the years of torture and indoctrination as todlers, and the lies and irrelavent Indian culture and hatred of our individuality and success. <br>
-<br>This is what we experienced in the satanic Hare Krishna school for boys. They took everything: our family homes, our family money, our education, our family members, our futures, and our pasts. We were robbed, tortured, and sent to death, and in our homes and childhood properties we were replaced by thousands of Indian families, and Slavs and foreigners and the wealthy comfortable owners of the satanic Hare Krishna cult corporation (ISKCON Inc.), some of them our own parents, who robbed us of everything, within their power to steal and conceal, and they taught us to die and sent us to die.
+          <ul>
+               <li>
+     <u>From a survivor:</u><br>We were kept as animals as children from the age of 3. We were tortured daily in a program of aceticism. <br>
+     <br>We were herded like animals, separated from our parents. <br>
+     <br>Our introduction to English was with lessons in self-sacrifice, fasting, acceptance of death, loss and pain, familicide and suicide. <br>
+     <br>The cult took our family property and our personal property on arrival to the school. The perpose of the school was to prepare us for death. We were being sacrificed to the Indian demon god Krishna and its Indian gurus. We, tiny children, were instructed to face each day for the cause of death; to face each day from the first as it would be our last, as if it would be our last, to live each day to die, and to die for images of a blue-black fantasy creature from India and a list of its alternative forms and men, dead men from India and living men and even some women. Those living representatives of the Indian demon were the robbers and rapists and thieves of our bodies, our property and lives. 
+     <br>
+     <br>Every day we awoke from tortuous sleep, forbidden from having beds or pillows. We were then, every day, herded like animals, 3 years old, 4 years old, 5 years old, through the dark and cold to the bright lights of a shiny temple room to worship the images of a blue-black murder-rape demon called Krishna with its fantasy 108 fair-skinned women. There, without the touch of parents, like animals, forced to dance and perform for preachers and adults, with the images of bloody vicious familicidal murder; then indoctrinated with lectures on humility, sacrifice, karma and death, suicidal fasting, self-destruction, and self-blame, and worship of comfortable adults and statues of Indian men and statues of murderous animal men and the demon blue-black rape demon from India; instructed to seek death to be reincarnated as cows, grass, dirt, animals, and servants and slaves and sex partners with the blue-black fantasy demon from India and its representatives.
+     <br>
+     <br>
+     We who survived and escaped discovered the total robbery of our lives, the total and complete deception, the theft of our childhoods, the theft of our freedom to learn from our experience and thoughts. Our lives are haunted with the enduring memory of every day of the years of torture and indoctrination as todlers, and the lies and irrelavent Indian culture and hatred of our individuality and success. 
+     <br>
+     <br>This is what we experienced in the satanic Hare Krishna school for boys. They took everything: our family homes, our family money, our education, our family members, our futures, and our pasts. We were robbed, tortured, and sent to death. In our homes and childhood properties we were replaced by thousands of Indian families, and Slavs and foreigners and the wealthy comfortable owners of the satanic Hare Krishna cult corporation (ISKCON Inc.), some of them our own parents, who robbed us of everything, within their power to steal and conceal. They taught us to die in the Hare Krishna cult school for boys, and in their company and in their lectures. They gave us to be slaves for imaginary devil characters Indians and perverts, or be sent to the world as sacrificed children, homeless animals, naked of everything entitled to humans, to starve and die; sacrificed to their satanic fanatasies, to be replaced in life by Indian immigrants and worshiping foreigners.
+          <br>
+          <br>(This was the system. Then there was rape, beatings, physical and psychological tortures concocted by the perverts and monsters who managed the satanic torture schools and herded the children day to day.)
+     </li>
+     <li>
+          <u></u>
+          <br>
+          <br>
+          <br>
+     </li>
+</ul>
      </span></p>
      </div>
      <br>
